# h-gpgme

./: .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  Dockerfile.test  LICENSE  NOTES.txt  README.markdown  README.md  RELEASE.md  cabal.project.local  docker-compose.yml  h-gpgme.cabal  runtests  runtests-ci.sh  runtests-noprompt  runtests-noprompt-travis  runtests-noprompt.sh  runtests-travis  stack-lts-6.yaml  stack.yaml
.github/: gnupg-release-keys.asc
.github/workflows/: ci.yml  release.yml
src/Crypto/: Gpgme.hs
src/Crypto/Gpgme/: Crypto.hs  Ctx.hs  Internal.hs  Key.hs  Types.hs
src/Crypto/Gpgme/Key/: Gen.hs
test/: CryptoTest.hs  CtxTest.hs  InternalTest.hs  KeyGenTest.hs  KeyTest.hs  Main.hs  README  README.md  TestUtil.hs
test/alice/: pubring.gpg~  pubring.kbx  random_seed  secring.gpg  trustdb.gpg
test/alice/private-keys-v1.d/: 34EDEA34CF3EB31D1597DC6A267C541F8B98C1BA.key  C8211FF1AE2116DAE8AECBAE927CD00ED85D1667.key
test/bob/: pubring.gpg~  pubring.kbx  random_seed  secring.gpg  trustdb.gpg
test/bob/private-keys-v1.d/: 0343B755935C59A7F2AA017461C111CC83D23FC6.key  3CAAC86060F1D5F4CAE6A20022692FD5CE45E580.key
test/carol/: pubring.kbx  trustdb.gpg
test/carol/private-keys-v1.d/: A0C57E0F1A0A3905665F9296F9C07A328DDC10D3.key  B8E3978CB820570E71566CAFCF40DE3BC2857796.key
test/real-person/: pubring.kbx  pubring.kbx~  real-person.key  trustdb.gpg
