name:                h-gpgme
version:             0.1.0.0
description:         High Level Binding for GnuPG Made Easy (gpgme)
license:             MIT
license-file:        LICENSE
author:              Reto Habluetzel
maintainer:          rethab@rethab.ch
copyright:           Reto Habluetzel
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fno-warn-orphans
  exposed-modules:     Crypto.Gpgme
  build-depends:       base           ==4.*
                     , bindings-gpgme >=0.1 && <0.2
                     , bytestring     == 0.10.*
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      src, test
  main-is:             Main.hs
  build-depends:       base                       == 4.*
                     , bindings-gpgme             >= 0.1 && <0.2
                     , bytestring     == 0.10.*

                     , HUnit                      == 1.2.*
                     , test-framework             == 0.8.*
                     , test-framework-quickcheck2 == 0.3.*
                     , test-framework-hunit       == 0.3.*
                     , QuickCheck                 
