Name:                h-gpgme
Version:             0.6.2.0
Description:         High Level Binding for GnuPG Made Easy (gpgme): A Haskell API for the gpgme C library.
Synopsis:            High Level Binding for GnuPG Made Easy (gpgme)
License:             MIT
License-file:        LICENSE
Author:              Reto
Maintainer:          rethab@protonmail.com
Copyright:           (c) Reto 2022
Homepage:            https://github.com/rethab/h-gpgme
Bug-reports:         https://github.com/rethab/h-gpgme/issues
Tested-With:           GHC==8.10.7
                     , GHC==9.2.8
                     , GHC==9.4.8
                     , GHC==9.6.6
                     , GHC==9.8.4
                     , GHC==9.10.3
Category:            Cryptography
Build-Type:          Simple
Cabal-Version:       >=1.10
Extra-Source-Files:
  CHANGELOG.markdown
  README.markdown
  .gitignore


source-repository head
  type:     git
  location: https://github.com/rethab/h-gpgme

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fno-warn-orphans
  exposed-modules:     Crypto.Gpgme
                     , Crypto.Gpgme.Key.Gen
  other-modules:       Crypto.Gpgme.Key
                     , Crypto.Gpgme.Ctx
                     , Crypto.Gpgme.Crypto
                     , Crypto.Gpgme.Internal
                     , Crypto.Gpgme.Types
  build-depends:       base           >= 4.14 && <5
                     , bindings-gpgme >= 0.1.8 && <0.3
                     , bytestring     >= 0.10 && <0.13
                     , transformers   >= 0.4.1 && <0.7
                     , time           >= 1.4 && <2
                     , unix           >= 2.5 && <2.9
                     , email-validate >= 2.0 && <2.4
                     , data-default   >= 0.5 && <0.9
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src, test
  main-is:             Main.hs
  build-depends:       base           >= 4.14 && <5
                     , bindings-gpgme >= 0.1.8 && <0.3
                     , bytestring     >= 0.10 && <0.13
                     , transformers   >= 0.4.1 && <0.7
                     , time           >= 1.4 && <2
                     , unix           >= 2.5 && <2.9
                     , email-validate >= 2.0 && <2.4
                     , data-default   >= 0.5 && <0.9
                     , directory      >= 1.2 && <2
                     , filepath       >= 1.3 && <2
                     , temporary      >= 1.2 && <2
                     , exceptions     >= 0.8 && <0.11

                     , HUnit          >= 1.3 && <2
                     , tasty          >= 1.0 && <2
                     , tasty-quickcheck >= 0.9 && <0.12
                     , tasty-hunit    >= 0.10 && <0.11
                     , QuickCheck     >= 2.10 && <3
  other-modules:       Crypto.Gpgme
                     , Crypto.Gpgme.Crypto
                     , Crypto.Gpgme.Ctx
                     , Crypto.Gpgme.Internal
                     , Crypto.Gpgme.Key
                     , Crypto.Gpgme.Key.Gen
                     , Crypto.Gpgme.Types
                     , CryptoTest
                     , CtxTest
                     , KeyTest
                     , KeyGenTest
                     , TestUtil
