cabal-version:       2.4
name:                h-gpgme
version:             0.6.3.0
synopsis:            High Level Binding for GnuPG Made Easy (gpgme)
description:         High Level Binding for GnuPG Made Easy (gpgme): A Haskell API for the gpgme C library.
license:             MIT
license-file:        LICENSE
author:              Reto
maintainer:          rethab@protonmail.com
copyright:           (c) 2014-2026 Reto
homepage:            https://github.com/rethab/h-gpgme
bug-reports:         https://github.com/rethab/h-gpgme/issues
category:            Cryptography
build-type:          Simple
tested-with:         GHC == 8.10.7
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.6
                   , GHC == 9.8.4
                   , GHC == 9.10.3
                   , GHC == 9.12.4
extra-doc-files:     CHANGELOG.md
                   , README.md

source-repository head
  type:     git
  location: https://github.com/rethab/h-gpgme

common warnings
  ghc-options:         -Wall
  default-language:    Haskell2010

common deps
  build-depends:       base           >= 4.14 && <5
                     , bindings-gpgme >= 0.1.8 && <0.3
                     , bytestring     >= 0.10 && <0.13
                     , transformers   >= 0.4.1 && <0.7
                     , time           >= 1.4 && <2
                     , unix           >= 2.5 && <2.9
                     , email-validate >= 2.0 && <2.4
                     , data-default   >= 0.5 && <0.9

library
  import:              warnings, deps
  hs-source-dirs:      src
  ghc-options:         -fno-warn-orphans
  exposed-modules:     Crypto.Gpgme
                     , Crypto.Gpgme.Key.Gen
  other-modules:       Crypto.Gpgme.Key
                     , Crypto.Gpgme.Ctx
                     , Crypto.Gpgme.Crypto
                     , Crypto.Gpgme.Internal
                     , Crypto.Gpgme.Types

test-suite tests
  import:              warnings, deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  -- The tests reach into modules the library does not expose (Types, Internal),
  -- so they compile the sources rather than depend on the library.
  hs-source-dirs:      src, test

  build-depends:       directory      >= 1.2 && <2
                     , filepath       >= 1.3 && <2
                     , temporary      >= 1.2 && <2
                     , exceptions     >= 0.8 && <0.11

                     , HUnit          >= 1.3 && <2
                     , tasty          >= 1.0 && <2
                     , tasty-quickcheck >= 0.9 && <0.12
                     , tasty-hunit    >= 0.10 && <0.11
                     , QuickCheck     >= 2.10 && <3
  other-modules:       Crypto.Gpgme
                     , Crypto.Gpgme.Crypto
                     , Crypto.Gpgme.Ctx
                     , Crypto.Gpgme.Internal
                     , Crypto.Gpgme.Key
                     , Crypto.Gpgme.Key.Gen
                     , Crypto.Gpgme.Types
                     , CryptoTest
                     , CtxTest
                     , InternalTest
                     , KeyTest
                     , KeyGenTest
                     , TestUtil
